--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: montserrat-thin;
   src: url("./assets/fonts/Montserrat-VariableFont_wght.ttf");
@@ -33,6 +37,11 @@
   background-color: #cbf3f0;
   cursor: pointer;
   text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+.btn:hover {
+  opacity: 0.75;
+  transform: scale(0.9);
 }
 .btn__text {
   color: black;
@@ -41,6 +50,14 @@
 }
 .btn--big .btn__text {
   font-size: 24px;
+}
+@media (max-width: 576px) {
+  .btn--big .btn__text {
+    font-size: 20px;
+  }
+}
+.btn--orange-dark {
+  background-color: #fd7f20;
 }
 
 .card-product {
@@ -77,7 +94,12 @@
   color: black;
   font-size: 18px;
   text-decoration: none;
-  font-family: montserrat-black, sans-serif;
+  font-family: montserrat-bold;
+  transition: all 0.3s ease-in-out;
+}
+.header__logo-text:hover {
+  opacity: 0.75;
+  transform: scale(0.9);
 }
 .header__nav {
   display: flex;
@@ -86,7 +108,13 @@
 .header__nav-link {
   color: black;
   text-decoration: none;
+  font-family: montserrat-bold;
   font-size: 16px;
+  transition: all 0.3s ease-in-out;
+}
+.header__nav-link:hover {
+  opacity: 0.75;
+  transform: scale(0.9);
 }
 @media (max-width: 576px) {
   .header__nav-link {
@@ -165,6 +193,9 @@
 }
 .hero__decs {
   grid-column: span 6;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 @media (max-width: 576px) {
   .hero__decs {
@@ -172,6 +203,7 @@
     grid-column: span 12;
     text-align: center;
     padding-bottom: 3rem;
+    align-items: center;
   }
 }
 .hero__title {
@@ -201,6 +233,11 @@
   color: white;
   margin-top: 0;
   margin-bottom: 1rem;
+}
+@media (max-width: 576px) {
+  .hero__subtitle {
+    font-size: 16px;
+  }
 }
 .hero__img {
   grid-column: span 6;
@@ -279,6 +316,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1rem;
 }
 .products__card-img {
   width: 50%;
@@ -288,6 +326,7 @@
   font-family: montserrat-bold;
   margin: 0;
   margin-top: 24px;
+  margin-bottom: 1rem;
   text-align: center;
 }
 
